--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,17 @@
         <artifactId>jackson-datatype-jsr310</artifactId>
         <version>2.15.2</version>
     </dependency>
+        <dependency>
+            <groupId>org.awaitility</groupId>
+            <artifactId>awaitility</artifactId>
+            <version>4.2.0</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.1.5</version>
+        </dependency>
 
     </dependencies>
 
